Fix race with google variation ID registration

If ExternalDataUseObserverBridge::ShouldRegisterAsDataUseObserver() is
called before ExternalDataUseObserverBridge::SetRegisterGoogleVariationID
is called, GWS id will not be registered. This CL fixes that.

This CL also renames SetRegisterGoogleVariationID appropriately to
SetProfileSigninStatus in some files

BUG=714281

Review-Url: https://codereview.chromium.org/2834463005
Cr-Commit-Position: refs/heads/master@{#466464}

Former-commit-id: 96efb190e51a943b44485a8b3c53338498814c43