chrome/browser/android/data_usage/external_data_use_observer_bridge.cc
@@ -60,8 +60,7 @@ namespace android {
 
 ExternalDataUseObserverBridge::ExternalDataUseObserverBridge()
     : construct_time_(base::TimeTicks::Now()),
-      is_first_matching_rule_fetch_(true),
-      register_google_variation_id_(false) {
+      is_first_matching_rule_fetch_(true) {
   DCHECK(content::BrowserThread::CurrentlyOn(content::BrowserThread::IO));
 
   // Detach from IO thread since rest of ExternalDataUseObserverBridge lives on
@@ -208,31 +207,27 @@ void ExternalDataUseObserverBridge::ShouldRegisterAsDataUseObserver(
       FROM_HERE,
       base::Bind(&ExternalDataUseObserver::ShouldRegisterAsDataUseObserver,
                  external_data_use_observer_, should_register));
+}
 
-  if (!register_google_variation_id_)
-    return;
-
+void ExternalDataUseObserverBridge::RegisterGoogleVariationID(
+    bool should_register) {
+  DCHECK(thread_checker_.CalledOnValidThread());
   variations::VariationID variation_id = GetGoogleVariationID();
 
   if (variation_id != variations::EMPTY_ID) {
     // Set variation id for the enabled group if |should_register| is true.
     // Otherwise clear the variation id for the enabled group by setting to
     // EMPTY_ID.
-    variations::AssociateGoogleVariationID(
-        variations::GOOGLE_WEB_PROPERTIES, kSyntheticFieldTrial,
-        kSyntheticFieldTrialEnabledGroup,
-        should_register ? variation_id : variations::EMPTY_ID);
+    if (should_register) {
+      variations::AssociateGoogleVariationID(
+          variations::GOOGLE_WEB_PROPERTIES, kSyntheticFieldTrial,
+          kSyntheticFieldTrialEnabledGroup, variation_id);
+    }
     ChromeMetricsServiceAccessor::RegisterSyntheticFieldTrial(
         kSyntheticFieldTrial, should_register
                                   ? kSyntheticFieldTrialEnabledGroup
                                   : kSyntheticFieldTrialDisabledGroup);
   }
-}
-
-void ExternalDataUseObserverBridge::SetRegisterGoogleVariationID(
-    bool register_google_variation_id) {
-  DCHECK(thread_checker_.CalledOnValidThread());
-  register_google_variation_id_ = register_google_variation_id;
 }
 
 bool RegisterExternalDataUseObserver(JNIEnv* env) {
