chrome/browser/android/data_usage/external_data_use_observer_bridge.h
@@ -98,7 +98,7 @@ class ExternalDataUseObserverBridge {
   // should register as a data use observer.
   virtual void ShouldRegisterAsDataUseObserver(bool should_register) const;
 
-  void SetRegisterGoogleVariationID(bool register_google_variation_id);
+  void RegisterGoogleVariationID(bool should_register);
 
  private:
   // Java listener that provides regular expressions to |this|. Data use
@@ -118,9 +118,6 @@ class ExternalDataUseObserverBridge {
 
   // True if matching rules are fetched for the first time.
   bool is_first_matching_rule_fetch_;
-
-  // True if Google variation ID should be registered.
-  bool register_google_variation_id_;
 
   // |io_task_runner_| accesses ExternalDataUseObserver members on IO thread.
   scoped_refptr<base::SingleThreadTaskRunner> io_task_runner_;
